apps/base/media/radarr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  serviceName: radarr
  replicas: 1
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/radarr:6.1.0-nightly@sha256:08344e0e278e2b05a54b257927a5cf1407786a54a3a12ebdadbf25e9fe6809cb
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: radarr-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 900Mi
              cpu: "1"
            requests:
              memory: 500Mi
              cpu: "0.5"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: radarr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 30Gi
