apps/base/media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: radarr
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
